--- a/src/index.html
+++ b/src/index.html
@@ -22,29 +22,51 @@
       </p>
     </header>
     <section class="form">
-      <form>
-        <div class="">
-          <label for="username">Username</label>
-          <input
-            type="text"
-            class="form-control"
-            id="username"
+      <form class="form-login">
+        <div class="form__wrap">
+          <img
+            src="./images/username.png"
+            alt="username icon"
+            class="form__username-icon"
           >
+          <div class="form__wrap-field">
+            <label for="username" class="form__label-text">
+              Username
+            </label>
+            <input
+              type="text"
+              class="form__input"
+              id="username"
+            >
+          </div>
         </div>
-        <div class="">
-          <label for="password">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="password"
-          >
+        <div class="form__wrap">
+          <div class="form__password-icon"></div>
+          <div class="form__wrap-field">
+            <label for="password" class="form__label-text">
+              Password
+            </label>
+            <input
+              type="password"
+              class="form__input"
+              id="password"
+            >
+          </div>
         </div>
-        <div class="">
-          <button type="submit" class="">
+        <div class="form__wrap-buttons">
+          <button type="submit" class="form__button">
             Log in
           </button>
+          <a href="/" class="form__link">
+            Forgot Password
+          </a>
         </div>
       </form>
     </section>
+    <footer class="footer">
+      <p class="footer__text">
+        © 2021 PUT Corp. All rights reserved.
+      </p>
+    </footer>
   </body>
 </html>
